--- a/config/behavior_server.yaml
+++ b/config/behavior_server.yaml
@@ -1,10 +1,6 @@
-table_position:
-  dual_table        : [2.5, 2.4, 0.0]
-  movable_table_1200: [4.5, 1.9, 0.0]
-  movable_table_1500: [5.5, 1.4, 0.0]
-  movable_table_1800: [6.5, 2.4, 0.0]
+dual_table_upper_r_shooter_delay: 0.5
 
-goal_distance_from_table: 0.6
+table_approach_vel: 0.1
 
 shooter_valve_on_duration:
   dual_table_lower_shooter      : 0.5
@@ -13,3 +9,7 @@ shooter_valve_on_duration:
   movable_table_1200_shooter    : 0.5
   movable_table_1500_shooter    : 0.5
   movable_table_1800_shooter    : 0.5
+
+aligning_p_gain_x  : 1.0
+aligning_p_gain_y  : 1.0
+aligning_p_gain_yaw: 3.0
